--- a/BashSoft/BashSoft.csproj
+++ b/BashSoft/BashSoft.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectoryInfo.cs" />
     <Compile Include="IOManager.cs" />
     <Compile Include="Launcher.cs" />
     <Compile Include="OutputWriter.cs" />
