--- a/BashSoft/BashSoft.csproj
+++ b/BashSoft/BashSoft.csproj
@@ -44,10 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DirectoryInfo.cs" />
+    <Compile Include="ExceptionMessages.cs" />
     <Compile Include="IOManager.cs" />
     <Compile Include="Launcher.cs" />
     <Compile Include="OutputWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentsRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
